[gd_scene load_steps=7 format=3 uid="uid://bl3l6agews48g"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_twatw"]
[ext_resource type="Texture2D" uid="uid://drjkd7gnmpw3y" path="res://assets/bcaf52a0-a653-4a54-a1a7-5b1df73bf922_2.png" id="2_hmynl"]
[ext_resource type="Theme" uid="uid://bx5ew11l5r0ch" path="res://temas/config_menu.tres" id="3_ifjjp"]
[ext_resource type="FontFile" uid="uid://2bqe2el7ao7a" path="res://font/StepalangeShort-p7GZd.otf" id="4_io8js"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2lnu6"]
texture = ExtResource("2_hmynl")

[sub_resource type="Theme" id="Theme_gfdpw"]

[node name="Menus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_twatw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2lnu6")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.0583942
anchor_top = 0.419207
anchor_right = 0.233577
anchor_bottom = 0.597561
offset_left = -3.27007
offset_top = 3.35367
offset_right = -3.27008
offset_bottom = 3.35364
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_ifjjp")
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ConfigButton")
text = "Jogar"

[node name="ConfigButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../ExitButton")
theme = SubResource("Theme_gfdpw")
text = "Configurar"

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ConfigButton")
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Sair"

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.5
offset_top = -72.0
offset_right = 202.5
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_io8js")
theme_override_font_sizes/font_size = 160
text = "Astralis
"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/PlayButton" to="CanvasLayer/VBoxContainer/PlayButton" method="_on_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ConfigButton" to="CanvasLayer/VBoxContainer/PlayButton" method="_on_config_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ExitButton" to="CanvasLayer/VBoxContainer/PlayButton" method="_on_exit_button_pressed"]
